--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -815,10 +815,10 @@
                             </ul>
                             <br>
                             <div class="col-md-12 mt-2">
-                                <a href="{% url "business:business-credit-steps" %}" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
-                                <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To
-                                    Financing</a><br><br>
-                                <a href="{% url "business:business-credit-steps" %}" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
+                                <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
+{#                                <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To#}
+{#                                    Financing</a><br><br>#}
+                                <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
                             </div>
                         </div>
                     </div>
