--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -37,10 +37,10 @@
                 </li>
                 <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/goals" class="nav-link">My Goals With The
                     Platform</a></li>
-                <li class="nav-item">
-                    <a href="/{{ request.resolver_match.app_name }}/upgrade" class="nav-link">Upgrade to Full Business Builder Program
-                        with No Money Down</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a href="/{{ request.resolver_match.app_name }}/upgrade" class="nav-link">Upgrade to Full Business Builder Program#}
+{#                        with No Money Down</a>#}
+{#                </li>#}
                 <li class="nav-item">
                     <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
                        class="nav-link"> Watch Webinar On Building Business Credit </a>
