--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -91,7 +91,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="/{{ request.resolver_match.app_name }}/business-credit-step" class="nav-link"> Choose Business Credit
+                    <a href="/{{ request.resolver_match.app_name }}/business-credit-steps-onlyprograms" class="nav-link"> Choose Business Credit
                         Building Steps You Need Done For You </a>
                 </li>
                 <li class="nav-item">
