--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -95,13 +95,13 @@
                                 <li class="nav-item"><a class="nav-link" class="nav-link" href="/services">Services</a>
                                 </li>
 
-                                <li class="nav-item"><a class="nav-link" class="nav-link"
+                              <!--  <li class="nav-item"><a class="nav-link" class="nav-link"
                                                         href="/financing">Financing</a>
                                     <ul><br>
                                         <li><a class="nav-link" href="/financing">Financing Offers</a>
                                         </li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a class="nav-link" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">Affiliate Program</a>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
