--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -42,9 +42,9 @@
 
                     <p class="lead mb-4 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s"
                        style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
-                        We help busineses build their business credit and acquire funding. We are one of the only
-                        companies that actually do the steps to help you build your business credit for you for an
-                        affordable price.</p>
+                        We Help Businesses Acquire Business Credit With Our Free Software, Mobile App, & Google Chrome Extension. Also,
+                      We Have A Free Personal Credit, Marketing, & Business Credit Course In Our Software As Well. Get $1,500 In Free Marketing, & Only
+                    Pay For Real Services Only When You Need It & Would Like To Upgrade & Purchase Our Business Credit Builder Package. </p>
                     <a class="btn btn-theme wow fadeInUp" data-wow-duration="3s" data-wow-delay="0.5s"
                        href="https://www.youtube.com/watch?v=xNCfnbGT5hY&t=726s" target="_blank"
                        data-text="Watch Our Webinar"
@@ -91,11 +91,46 @@
                             <div class="ellipse"></div>
                             <i class="la la-info"></i>
                         </div>
-                        <h2>We're Helping Clients Build Business Credits</h2>
+                        <h2>We're Helping Clients Build Business Credit</h2>
                     </div>
                     <p class="lead">Click The Play Button To The Left To See Our Software Demo</p>
                     <a class="btn btn-theme btn-circle" href="/pricing" data-text="">Sign Up Today
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+<style media="screen">
+  @media all and (min-width: 1025px) {
+the_name_of_the_button_class_or_id {
+display: none;
+}
+}
+</style>
+
+    <section class="pt-0">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-12 my-btn-in-desktopd">
+                    <img class="img-fluid w-250" src="/static/images/iphonescreenshot.png" height="400px" alt="">
+                </div>
+                <!--  <div class="col-lg-6 col-md-12 my-ifram-in-mobile">-->
+                <!--    <div class="video-responsive my-ifram-in-mobile">-->
+                <!--    <iframe width="100%" height="250" src="https://www.youtube.com/embed/dAdSU6r5jPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                <!--</div>-->
+                <!--  </div>-->
+                <div class="col-lg-6 col-md-12 md-mt-5">
+                    <div class="section-title mb-3">
+                        <div class="title-effect title-effect-2">
+                            <div class="ellipse"></div>
+                            <i class="la la-info"></i>
+                        </div>
+                        <h4>Download Our Free Iphone & Android App</h4>
+                        <a href="https://apps.apple.com/us/app/get-dinero-today/id1520722061" target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
+                            <a href="https://play.google.com/store/apps/details?id=com.millennialbusinessbuilders.getdianotoday" target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Google Play Store</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -770,7 +805,7 @@
                                 </ul>
                                 <br>
                                 <div class="col-md-12 mt-2">
-                                    <a href="https://www.getdinerotoday.com/user/login/" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                    <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                         Package</a>
                                 </div>
                             </div>
