--- a/getdinerotoday/templates/landingpages/pricing.html
+++ b/getdinerotoday/templates/landingpages/pricing.html
@@ -84,7 +84,7 @@
                             </ul>
                             <br>
                             <div class="col-md-12 mt-2">
-                                <a href="https://www.getdinerotoday.com/user/login/" class="btn btn-theme btn-circle">Sign Up For Forever Free
+                                <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                     Package</a>
                             </div>
                         </div>
@@ -129,10 +129,10 @@
                         </ul>
                         <br>
                         <div class="col-md-12 mt-2">
-                            <a href="/financing" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
-                            <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To
-                                Financing</a><br><br>
-                            <a href="/financing" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
+                            <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
+{#                                <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To#}
+{#                                    Financing</a><br><br>#}
+                            <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
                         </div>
                     </div>
                 </div>
