--- a/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
+++ b/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
@@ -177,7 +177,7 @@
                                             voice broadcasting to grow your business for 60 days<br>
                                             &#8226; Free Access to our data platform that helps you get and export
                                             100,000 leads for 60 days<br>
-                                            <a href="#">Watch video to explain bonuses</a>
+                                          <!--  <a href="#">Watch video to explain bonuses</a> -->
                                         </div>
                                         <div class="text-center mb-2 font-weight-bold">
                                             Need All The Steps? Get The Business Builder Monthly Program for $109.99
@@ -321,7 +321,7 @@
                                             broadcasting to grow your business for 60 days<br>
                                             &#8226; Free Access to our data platform that helps you get and export
                                             100,000 leads for 120 days<br>
-                                            <a href="#">Watch video to explain bonuses</a>
+                                          <!--  <a href="#">Watch video to explain bonuses</a> -->
 
                                         </div>
                                         <div class="text-center mb-2 font-weight-bold">
