--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -107,12 +107,12 @@
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enternewleads' %}" class="nav-link">Enter New Leads</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:leadoverview' %}" class="nav-link">Lead Overview</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:mysales' %}" class="nav-link">My Sales</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:networkmarketing' %}" class="nav-link">Network Marketing</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enteraffiliates' %}" class="nav-link">Enter Affiliate Agents</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:salesaffiliates' %}" class="nav-link">Sales Affiliates Overview</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:residualsfromaffiliates' %}" class="nav-link">Residual Payments From Your Affiliates</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:freesignup' %}" class="nav-link">Clients Who Have Signed Up For Forever Free Program</a></li>
-                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:paidsignup' %}" class="nav-link">Clients Who Have Signed Up For Paid Program</a></li>
+                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:networkmarketing' %}" class="nav-link">How To Leverage Your Network</a></li>
+                  <!-- <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enteraffiliates' %}" class="nav-link">Enter Affiliate Agents</a></li> -->
+                <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:salesaffiliates' %}" class="nav-link">Sales Affiliates Overview</a></li> -->
+                <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:residualsfromaffiliates' %}" class="nav-link">Residual Payments From Your Affiliates</a></li> -->
+                <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:freesignup' %}" class="nav-link">Clients Who Have Signed Up For Forever Free Program</a></li> -->
+                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:paidsignup' %}" class="nav-link">Clients Who Have Signed Up Under Your Portal</a></li>
                   <li class="nav-item">
                      <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Finance <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
@@ -127,12 +127,12 @@
                   <li class="nav-item">
                      <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Marketing Information <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:whitelabelwebinar'%}" class="nav-link"> White Label Webinar</a></li>
+                      <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:whitelabelwebinar'%}" class="nav-link"> White Label Webinar</a></li>
                         <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:buywhitelabelwebsite'%}" class="nav-link"> Buy White Label Website </a></li>
                         <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:buywhitelabelbusinesspackage'%}" class="nav-link"> Buy White Label Business Package </a></li>
-                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewportals'%}" class="nav-link"> View Your White Label Portals</a></li>
-                       <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewwhitelabelwebsite'%}" class="nav-link"> View Your White Label Website (Only For Those Who Have Purchased)</a></li>
-                       <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewwhitelabelbusinesspackage'%}" class="nav-link"> View Your White Label Business Package (Only For Those Who Have Purchased)</a></li>
+                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewportals'%}" class="nav-link"> View Your White Label Portal</a></li>
+                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewwhitelabelwebsite'%}" class="nav-link"> View Your White Label Website (Only For Those Who Have Purchased)</a></li> 
+                    <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewwhitelabelbusinesspackage'%}" class="nav-link"> View Your White Label Business Package (Only For Those Who Have Purchased)</a></li>
                      </ul>
                   </li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:partnercommisssions' %}" class="nav-link">Your Residual Commissions On Products</a></li>
