--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -196,7 +196,10 @@
                     <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money Referring Friends! </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
+                    <a href="{% url 'affiliate:home-affiliate' %}" class="nav-link">Go To Affiliate Agent Portal</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link"> Go To White Label Partner Portal</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
