--- a/goals/templates/makeextramoney/makeextramoney.html
+++ b/goals/templates/makeextramoney/makeextramoney.html
@@ -40,8 +40,23 @@
                         <p class="card-text">Click The Button Below To Enter The Affiliate Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter
+                                <a href="{% url 'affiliate:home-affiliate' %}"a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter
                                     Affiliate Portal</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="card mb-4 shadow-sm">
+                    <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
+                         height="370px" width="100%" alt="">
+                    <div class="card-body">
+                        <p class="card-text">Click The Button Below To Enter The White Label Partner Portal</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="btn btn-primary" target="_blank">Enter
+                                    White Label Partner Portal</a>
                             </div>
                         </div>
                     </div>
